test/error/patternesc2.luau
print(string.match("abc", "a%f[%"))
